--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
-Pillow
-PyAutoGUI
-pyobjc_framework_Cocoa
-pyobjc_framework_Quartz
-PyQt5
-PyQt5_sip
-pytesseract
-pyobjc
+AppKit==0.2.8
+moviepy==1.0.3
+natsort==8.4.0
+numpy==1.26.4
+openai==1.16.2
+pandas==2.2.1
+Pillow==10.3.0
+psutil==5.9.8
+PyAutoGUI==0.9.54
+pyobjc_framework_Cocoa==10.2
+pyobjc_framework_Quartz==10.2
+PyQt5==5.15.10
+PyQt5_sip==12.13.0
+pytesseract==0.3.10
+Quartz==0.0.1.dev0
+schedule==1.2.1
+skimage==0.0
