--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,50 @@
-AppKit==0.2.8
+annotated-types==0.6.0
+anyio==4.3.0
+appscript==1.2.5
+certifi==2024.2.2
+charset-normalizer==3.3.2
+decorator==4.4.2
+distro==1.9.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+imageio==2.34.0
+imageio-ffmpeg==0.4.9
+lazy_loader==0.4
+lxml==5.2.1
+MouseInfo==0.1.3
 moviepy==1.0.3
-natsort==8.4.0
+networkx==3.3
 numpy==1.26.4
-openai==1.16.2
-pandas==2.2.1
-Pillow==10.3.0
-psutil==5.9.8
+openai==1.17.0
+opencv-python==4.9.0.80
+packaging==24.0
+pillow==10.3.0
+proglog==0.1.10
 PyAutoGUI==0.9.54
-pyobjc_framework_Cocoa==10.2
-pyobjc_framework_Quartz==10.2
+pydantic==2.6.4
+pydantic_core==2.16.3
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyobjc-core==10.2
+pyobjc-framework-Cocoa==10.2
+pyobjc-framework-Quartz==10.2
+pyperclip==1.8.2
 PyQt5==5.15.10
-PyQt5_sip==12.13.0
+PyQt5-Qt5==5.15.13
+PyQt5-sip==12.13.0
+PyRect==0.2.0
+PyScreeze==0.1.30
 pytesseract==0.3.10
-Quartz==0.0.1.dev0
-schedule==1.2.1
-skimage==0.0
+pytweening==1.2.0
+requests==2.31.0
+rubicon-objc==0.4.8
+scikit-image==0.23.1
+scipy==1.13.0
+setuptools==69.2.0
+sniffio==1.3.1
+tifffile==2024.2.12
+tqdm==4.66.2
+typing_extensions==4.11.0
+urllib3==2.2.1
