--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 annotated-types==0.6.0
 anyio==4.3.0
 appscript==1.2.5
+attrs==23.2.0
+cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 decorator==4.4.2
 distro==1.9.0
+google-api-core==2.18.0
+google-api-python-client==2.126.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.0
 h11==0.14.0
 httpcore==1.0.5
+httplib2==0.22.0
 httpx==0.27.0
 idna==3.7
 imageio==2.34.0
@@ -17,34 +26,58 @@ MouseInfo==0.1.3
 moviepy==1.0.3
 networkx==3.3
 numpy==1.26.4
+oauthlib==3.2.2
 openai==1.17.0
 opencv-python==4.9.0.80
+outcome==1.3.0.post0
 packaging==24.0
 pillow==10.3.0
 proglog==0.1.10
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 PyAutoGUI==0.9.54
 pydantic==2.6.4
 pydantic_core==2.16.3
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
+pynput==1.7.6
 pyobjc-core==10.2
+pyobjc-framework-ApplicationServices==10.2
 pyobjc-framework-Cocoa==10.2
+pyobjc-framework-CoreText==10.2
 pyobjc-framework-Quartz==10.2
+pyparsing==3.1.2
 pyperclip==1.8.2
 PyQt5==5.15.10
 PyQt5-Qt5==5.15.13
 PyQt5-sip==12.13.0
 PyRect==0.2.0
 PyScreeze==0.1.30
+PySocks==1.7.1
 pytesseract==0.3.10
+python-dateutil==2.9.0.post0
 pytweening==1.2.0
+regex==2023.12.25
 requests==2.31.0
+requests-oauthlib==2.0.0
+rsa==4.9
 rubicon-objc==0.4.8
+schedule==1.2.1
 scikit-image==0.23.1
 scipy==1.13.0
+selenium==4.19.0
 setuptools==69.2.0
+six==1.16.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
 tifffile==2024.2.12
+tiktoken==0.6.0
 tqdm==4.66.2
+trio==0.25.0
+trio-websocket==0.11.1
 typing_extensions==4.11.0
+uritemplate==4.1.1
 urllib3==2.2.1
+wsproto==1.2.0
