--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@ output_videos/
 screenshot_data
 myenv
 .gitignore
-recommend/client_secret.json
-recommend/google_client.json
+recommend/tools/client_secret.json
+recommend/tools/google_client.json
